[tool.poetry]
name = "astraly-contracts"
version = "0.1.0"
description = ""
authors = ["astraly"]

[tool.poetry.dependencies]
python = "3.8.13"
pytest = "7.1.2"
pytest-asyncio = "0.19.0"
cairo-lang = "0.9.1"
cairo-nile = "0.8.0"
pytest-xdist = "2.5.0"
pytest-order = "1.0.1"
python-dotenv = "0.20.0"
web3 = "5.30.0"
"starknet.py" = "^0.4.6-alpha.0"


[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
