[tool.poetry]
name = "astraly-contracts"
version = "0.1.0"
description = ""
authors = ["astraly"]

[tool.poetry.dependencies]
python = "3.9.1"
pytest = "7.1.2"
pytest-asyncio = "0.19.0"
cairo-lang = "0.10.0"
cairo-nile = "0.9.0"
pytest-xdist = "2.5.0"
pytest-order = "1.0.1"
python-dotenv = "0.20.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
